app/network-policies/allow-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ingress
  namespace: k8s-microservices
  labels:
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: frontend
  policyTypes:
  - Ingress
  ingress:
  # Allow traffic from Ingress Controller
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 3000
